--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -11,9 +11,10 @@
     {% block head %}{% endblock %}
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <nav class="navbar {% if not request.user.is_authenticated %} navbar-expand-lg {% endif %} navbar-light bg-warning">
       <a class="navbar-brand" href="/">Flash Parcel</a>
-
+    
+        {% if not request.user.is_authenticated %}
       <button
         class="navbar-toggler"
         type="button"
@@ -28,16 +29,20 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="#"
-              >Customer <span class="sr-only">(current)</span></a
-            >
+          <li class="nav-item {% if request.GET.next != '/courier/' %} active {% endif %}">
+            <a class="nav-link active" href="/sign-in/?next=/customer/">Customer <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Courier</a>
+          <li class="nav-item {% if request.GET.next == '/courier/' %} active {% endif %}">
+            <a class="nav-link active" href="/sign-in/?next=/courier/">Courier <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
+      {% else %}
+      <form class="form-inline">
+        <span class="mr-4">{{ request.user.get_full_name|title }}</span>
+        <a href="/sign-out" class="btn btn-outline-dark">Sign Out</a>
+      </form>
+      {% endif %}
     </nav>
     
     {% block content %}{% endblock %}
